# rocket-crud-api

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/routes/: echo.rs  mod.rs  user.rs
src/tests/: basic_test.rs
tests/: basic_test.rs
tests/common/: mod.rs
