[package]
name = "rocket-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.10", features = ["helmet"] }
serde = { version = "1.0.131", features = ["derive"] }

